[package]
name = "tecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tecs_derive = { path = "tecs_derive" }

bincode = "1.3.3"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
erased-serde = "0.4.4"
